--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,8 +1,8 @@
 <p>
-    Briem Hand is both elegant and utterly accessible. It is direct and sincere without being excessively sentimental. It provides a range of weights, comes with guides and without and with joins and without. Briem Hand is an extended version of Briem Script which was designed by Gunnlaugur SE Briem in 1992 for the experimental teaching of italic handwriting.
+Briem Hand is elegant while also being quite accessible and very legible. It is direct and sincere without being excessively sentimental. It provides a range of weights, and comes with and without guides and joins. Briem Hand is an extended version of Gunnlaugur's 'Briem Script' which was designed in 1992. The Briem Hand is a modern adaptation of sixteenth-century chancery cursive.
 </p>
 <p>
-    Briem Hand includes Latin Vietnamese, Pinyin, and all Western, Central, and South-Eastern European language support, as well as several OpenType features (old-style and tabular figures, superscript and subscript numerals, fractions, stylistic alternates).
+Briem Hand includes Latin Vietnamese, Pinyin, and all Western, Central, and South-Eastern European language support, as well as several OpenType features (old-style and tabular figures, superscript and subscript numerals, fractions, stylistic alternates).
 </p>
 <p>
     To contribute, see <a href="https://github.com/SorkinType/Briem-Hand">github.com/SorkinType/Briem-Hand</a>
